--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 							<ul>
 								<li><a href="./" class="title">Brennan Nguyen</a></li>
 								<li><a href="./about" class="menu">About</a></li>
-								<li><a href="./projects" class="menu">Projects</a></li>
+								<li><a href="https://github.com/brennannguyen/PortfolioProjects" target = "_blank"class="menu">Projects</a></li>
 								<li><a href="mailto:brennantkn@gmail.com" class="menu contact">Contact</a></li>
 							</ul>
 							</nav>
@@ -32,11 +32,12 @@
 								<img src="images\headshot.jpg" alt="headshot">
 								<a href="https://drive.google.com/file/d/1bOJgP0PWhjofT9cuzRpOxmjVyUmjadj6/view?usp=sharing" target ="_blank" class="button">View my Resume</a>
 							</div>
-							<h3>Hi! I'm Brennan Nguyen, an analyst with over 3 years of experience. I visualize and analyze data using a variety of tools such as Excel, PowerBI, Tableau, and SQL.</h3>
-							<p>I hold a Bachelor's degree in Business Administration with a focus on Management Information Systems and Marketing from the University of Oklahoma. Additionally, I am certified as a Lean Six Sigma Green Belt through the IASSC.</p>
-							<p>I have interests in data visualization, data analysis, business intelligence, and creative design. My background in marketing has taught me how to effectively convey messages to audiences. I believe data is only useful when your audience understands why it is valuable and its purpose.				
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent cursus, erat quis semper vestibulum, neque tortor varius neque, sed vulputate ligula arcu eget mauris. Integer suscipit est maximus mauris egestas, quis accumsan diam ultrices. Duis blandit massa vel arcu dapibus convallis. Morbi nec enim id neque luctus ultrices.
+							<h3>Hi! I'm Brennan Nguyen, a data analyst with over 3 years of experience in analytical roles. My main expertise is in data visualization and data analysis.</h3>
+							<p>I graduated from the University of Oklahoma in 2020 with a Bachelor of Business Administration with concentrations in both Management Information Systems and Marketing. Additionally, I am certified as a Lean Six Sigma Green Belt through the IASSC.</p>
+							<p>I have interests in data visualization, data analysis, business intelligence, and creative design. My background in marketing has taught me how to effectively convey messages to audiences. I believe data is only useful when your audience is able to understand its value and purpose.
+							Therefore, as an analyst I strive to develop visualizations and reports that are digestible and actionable.				
 							</p>
+
 	
 							<div class="accordion-container">
 								<drop class="accordion">Work Experience</drop>
@@ -54,40 +55,28 @@
 										</p>
 										<p>September 2019 - July 2020
 											<br />
-											Marketing Analyst Intern at TMI Climate Solutions, Inc.
+											Marketing Analyst Intern at <a href="https://tmiclimatesolutions.com/" target="blank" class="link">TMI Climate Solutions, Inc.</a>
 										</p>
 									</div>
 								<drop class="accordion">Skills</drop>
 									<div class="panel">
-							  			<ul>
-											<li>
-												SQL (MySQL, Microsoft SQL Server)
-											</li>
-											<li>
-												Python (pandas, matplotlib, BeautifulSoup)
-											</li>
-											<li>
-												Tableau (Public)
-											</li>
-											<li>
-												Microsoft PowerBI (DAX)
-											</li>
-											<li>
-												Microsoft Excel (PowerQuery)
-											</li>
-											<li>
-												Jupyter Notebook
-											</li>
-											<li>
-												BMC Control-M (Business Workflow Automation Software)
-											</li>
-											<li>
-												Data Visualization
-											</li>
-											<li>
-												Data Cleaning
-											</li>
-										</ul>
+										<p>
+											<b>Data Visualization & Cleaning:</b> Tableau (Public), Microsoft PowerBI (DAX), Microsoft Excel
+										<br />
+										<br />
+											<b>Programming Languages:</b> SQL (MySQL, Microsoft SQL Server), Python (pandas, matplotlib, BeautifulSoup), HTML, CSS
+										<br />
+										<br />
+											<b>Tools:</b> Jupyter Notebook, Jira, Confluence, GitHub, BMC Control-M (Workflow Automation Software), Microsoft Office Suite</p>
+									</div>
+								<drop class="accordion">Random Facts About Me</drop>
+									<div class="panel">
+										<p>
+											In my free time, I practice yoga, read books, play pickleball, and learn new recipes. I am passionate about Excel and use it for an assortment of personal matters from travel itineraries to recipe databases.
+											<br />
+											<br />
+											<b>Currently Reading:</b> Outliers by Malcolm Gladwell and Storytelling with Data by Cole Nussbaumer Knaflic
+										</p>
 									</div>
 							</div>
 						</div>
