--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
 						</section>
 						<ul class="copyright">
 							<li>&copy; 2024</li>
-							<li>Inpsired By: <a href="https://juliazass.com/?ref=https://tilda.cc/madeontilda/">juliazass</a> </li>
+							<li>Not designed for mobile devices. Inpsired By: <a href="https://juliazass.com/?ref=https://tilda.cc/madeontilda/">juliazass</a> </li>
 						</ul>
 					</div>
 				</footer>
