--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; 2024</li><li>Inspired By: <a href="https://juliazass.com/?ref=https://tilda.cc/madeontilda/">juliazass</a> </li>
+								<li>&copy; 2024</li><li>Not designed for mobile devices. Inspired By: <a href="https://juliazass.com/?ref=https://tilda.cc/madeontilda/">juliazass</a> </li>
 							</ul>
 						</div>
 					</footer>
