--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 							<ul>
 								<li><a href="./" class="title">Brennan Nguyen</a></li>
 								<li><a href="./about" class="menu">About</a></li>
-								<li><a href="./projects" target = "_blank"class="menu">Projects</a></li>
+								<li><a href="./projects" class="menu">Projects</a></li>
 								<li><a href="mailto:brennantkn@gmail.com" class="menu contact">Contact</a></li>
 							</ul>
 							</nav>
