--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 							<ul>
 								<li><a href="./" class="title">Brennan Nguyen</a></li>
 								<li><a href="./about" class="menu">About</a></li>
-								<li><a href="./projects" class="menu">Projects</a></li>
+								<li><a href="./projects" target = "_blank"class="menu">Projects</a></li>
 								<li><a href="mailto:brennantkn@gmail.com" class="menu contact">Contact</a></li>
 							</ul>
 							</nav>
@@ -42,18 +42,18 @@
 									<div class="panel">
 							  			<p>April 2023 - December 2023 
 											<br />
-											Software Analyst 2 at <a href="https://www.paycom.com/" target="blank" class="link">Paycom Software, Inc.</a>
+											<b>Software Analyst 2</b> at <a href="https://www.paycom.com/" target="blank" class="link">Paycom Software, Inc.</a>
 											<br />
 											During my time at Paycom, an HR software company, I worked in both the Data Services and Data Intelligence departments.
 										</p>
 										<p>February 2021 - March 2023
 											<br />
-											Software Analyst 1 at <a href="https://www.paycom.com/" target="blank" class="link">Paycom Software, Inc.</a>
+											<b>Software Analyst 1</b> at <a href="https://www.paycom.com/" target="blank" class="link">Paycom Software, Inc.</a>
 											<br />
 										</p>
 										<p>September 2019 - July 2020
 											<br />
-											Marketing Analyst Intern at <a href="https://tmiclimatesolutions.com/" target="blank" class="link">TMI Climate Solutions, Inc.</a>
+											<b>Marketing Analyst Intern</b> at <a href="https://tmiclimatesolutions.com/" target="blank" class="link">TMI Climate Solutions, Inc.</a>
 										</p>
 									</div>
 								<drop class="accordion">Skills</drop>
@@ -62,10 +62,10 @@
 											<b>Data Visualization & Cleaning:</b> Tableau (Public), Microsoft PowerBI (DAX), Microsoft Excel
 										<br />
 										<br />
-											<b>Programming Languages:</b> SQL (MySQL, Microsoft SQL Server), Python (pandas, matplotlib, BeautifulSoup), HTML, CSS
+											<b>Programming Languages:</b> SQL (MySQL, Microsoft SQL Server), Python (pandas, matplotlib, ), HTML, CSS
 										<br />
 										<br />
-											<b>Tools:</b> Jupyter Notebook, Jira, Confluence, GitHub, BMC Control-M (Workflow Automation Software), Microsoft Office Suite</p>
+											<b>Tools & Platforms:</b> Jupyter Notebooks, Jira, VS Code, Confluence, GitHub, Agile, BMC Control-M (Workflow Automation Software), Microsoft Office Suite</p>
 									</div>
 								<drop class="accordion random-facts">Random Facts About Me</drop>
 									<div class="panel">
@@ -84,7 +84,7 @@
 				<footer id="footer">
 					<div class="inner">
 						<section>
-							<h2>Contact Me</h2>
+							<h5>Contact Me</h5>
 							<ul class="icons">
 								<li><a href="https://github.com/brennannguyen" class="icon brands style2 fa-github" target="_blank" ><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/brennan-nguyen/" class="icon brands style2 fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
