--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 											<b>Data Visualization & Cleaning:</b> Tableau (Public), Microsoft PowerBI (DAX), Microsoft Excel
 										<br />
 										<br />
-											<b>Programming Languages:</b> SQL (MySQL, Microsoft SQL Server), Python (pandas, matplotlib, ), HTML, CSS
+											<b>Programming Languages:</b> SQL (MySQL, Microsoft SQL Server), Python (pandas, matplotlib, seaborn, numpy), HTML, CSS
 										<br />
 										<br />
 											<b>Tools & Platforms:</b> Jupyter Notebooks, Jira, VS Code, Confluence, GitHub, Agile, BMC Control-M (Workflow Automation Software), Microsoft Office Suite</p>
@@ -70,7 +70,7 @@
 								<drop class="accordion random-facts">Random Facts About Me</drop>
 									<div class="panel">
 										<p>
-											In my free time, I practice yoga, read books, play pickleball, and learn new recipes. I am passionate about Excel and use it for an assortment of personal matters from travel itineraries to recipe databases.
+											In my free time, I practice yoga, read books, play pickleball, and learn new recipes. I am passionate about Excel and use it for an assortment of personal matters from travel itineraries to fantasy basketball.
 											<br />
 											<br />
 											<b>Currently Reading:</b> Outliers by Malcolm Gladwell and Storytelling with Data by Cole Nussbaumer Knaflic
