--- a/about.html
+++ b/about.html
@@ -33,9 +33,11 @@
 								<a href="https://drive.google.com/file/d/1NL-OI9H5653bn3onwi0GoYFiFzSmmugV/view?usp=sharing" target ="_blank" class="button">View my Resume</a>
 							</div>
 							<h3>Hi! I'm Brennan Nguyen, a data analyst with over 3 years of experience in analytical roles. My main expertise is in data visualization and data analysis.</h3>
-							<p>I graduated from the University of Oklahoma in 2020 with a Bachelor of Business Administration with concentrations in both Management Information Systems and Marketing. Additionally, I am certified as a Lean Six Sigma Green Belt through the IASSC.</p>
-							<p>I have interests in data visualization, data analysis, business intelligence, and creative design. My background in marketing has taught me how to effectively convey messages to audiences. I believe data is only useful when your audience is able to understand its value and purpose.
-							Therefore, as an analyst I strive to develop visualizations and reports that are digestible and actionable.				
+							<p>I graduated from the University of Oklahoma in 2020 with a Bachelor of Business Administration with concentrations in both Management Information Systems and Marketing. Additionally, I am certified as a Lean Six Sigma Green Belt through the IASSC.
+							<br /> 
+							<br />
+							I have strong interests in data visualization, data analysis, business intelligence, and creative design. My background in marketing and creative design has equipped me with skills to effectively convey messages to audiences through engaging visuals.
+							I aim to create visualizations and reports that can be easily be interpreted for value.	
 							</p>
 							<div class="accordion-container">
 								<drop class="accordion">Work Experience</drop>
@@ -93,7 +95,7 @@
 						</section>
 						<ul class="copyright">
 							<li>&copy; 2024</li>
-							<li>Not designed for mobile devices. Inpsired By: <a href="https://juliazass.com/?ref=https://tilda.cc/madeontilda/">juliazass</a> </li>
+							<li>Inpsired By: <a href="https://juliazass.com/?ref=https://tilda.cc/madeontilda/">juliazass</a> </li>
 						</ul>
 					</div>
 				</footer>
