--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<div class="inner">
 							<body class="main">
 								<h1>Hello, it's Brennan Nguyen. I'm an analyst with experience in the technology and manufacturing sectors. 
-									My expertise lies in data visualization and data analysis <span class="icon fa-regular fa-chart-bar"></span>. Here you can find my projects and other things I've been working on. </h1>
+									My expertise lies in data visualization and data analysis <span class="icon fa-regular fa-chart-bar"></span>. Below you can find my projects and other things I've been working on. </h1>
 								<h2>Explore my <a href="./projects">projects <span class="icon solid fa-folder-open"></span></a>, 
 									find out more <a href="./about">about me <span class="icon solid fa-user"></span></a>, 
 									check out my <a href="https://github.com/brennannguyen" target="_blank" class="link">GitHub</a> and 
@@ -58,7 +58,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; 2024</li><li>Not designed for mobile devices. Inspired By: <a href="https://juliazass.com/?ref=https://tilda.cc/madeontilda/">juliazass</a> </li>
+								<li>&copy; 2024</li><li>Inspired By: <a href="https://juliazass.com/?ref=https://tilda.cc/madeontilda/">juliazass</a> </li>
 							</ul>
 						</div>
 					</footer>
