--- a/projects.html
+++ b/projects.html
@@ -29,21 +29,21 @@
 						<div class="projects-container">
 							<h1 class="icon solid fa-folder-open" id="projectlist"></h1>
 							<div class="projects">
-								<h4 class="project1"><a href="https://github.com/brennannguyen/PortfolioProjects/blob/main/spotifydashboard.PNG" target="_blank">Spotify - Data Visualization and Cleaning</a></h4>
+								<h4 class="project1"><a href="https://github.com/brennannguyen/PortfolioProjects/blob/main/Customer%20Churn%20Analysis%20and%20Prediction%20Project.ipynb" target="_blank">IBM Telco - Customer Churn Analysis and Prediction</a></h4>
+								<p>Performed exploratory data analysis and built a predictive model in Python.</p>
+							</div>
+							<div class="projects">
+								<h4 class="project2"><a href="https://github.com/brennannguyen/PortfolioProjects/blob/main/spotifydashboard.PNG" target="_blank">Spotify - Data Visualization and Cleaning</a></h4>
 								<p>Processed and cleaned data in Excel, Dashboard developed in PowerBI.</p>
 							</div>
 							<div class="projects">
-								<h4 class="project2"><a href="https://public.tableau.com/app/profile/brennan.nguyen/viz/Coffeereview_comReviews/Dashboard1" target="_blank">Coffeereviews.com - Data Visualization and Cleaning</a></h4>
+								<h4 class="project3"><a href="https://public.tableau.com/app/profile/brennan.nguyen/viz/Coffeereview_comReviews/Dashboard1" target="_blank">Coffeereviews.com - Data Visualization and Cleaning</a></h4>
 								<p>Processed and cleaned data in Excel, Dashboard developed in Tableau.</p>
 							</div>
 							<div class="projects">
-								<h4 class="project3"><a href="https://github.com/brennannguyen/PortfolioProjects/blob/main/ExploringVehicleSalesData.sql" target="_blank">Vehicle Sales Data</a></h4>
+								<h4 class="project4"><a href="https://github.com/brennannguyen/PortfolioProjects/blob/main/ExploringVehicleSalesData.sql" target="_blank">Vehicle Sales Data</a></h4>
 								<p>Utilized SQL to perform exploratory data analysis of vehicle sales data.</p>
-							</div>
-							<div class="projects">
-								<h4 class="project4"><a href="https://github.com/brennannguyen/PortfolioProjects/blob/main/AmazonWebScrape.ipynb" target="_blank">Amazon Price Checker</a></h4>
-								<p>Scraped data from the web using Python to develop an automated price checker.</p>
-							</div>							
+							</div>					
 						</div>
 					</div>
 				</div>
@@ -51,7 +51,7 @@
 				<footer id="footer">
 					<div class="inner">
 						<section>
-							<h2>Contact Me</h2>
+							<h5>Contact Me</h5>
 							<ul class="icons">
 								<li><a href="https://github.com/brennannguyen" class="icon brands style2 fa-github" target="_blank" ><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/brennan-nguyen/" class="icon brands style2 fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
