--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
 				<div id="main">
 					<div class="inner">
 						<div class="projects-container">
-							<h1 class="icon solid fa-folder-open" id="projectlist"></h1>
+							<a href="https://github.com/brennannguyen/PortfolioProjects"><h1 class="icon solid fa-folder-open" id="projectlist"></h1></a>
 							<div class="projects">
 								<h4 class="project1"><a href="https://github.com/brennannguyen/PortfolioProjects/blob/main/Customer%20Churn%20Analysis%20and%20Prediction%20Project.ipynb" target="_blank">IBM Telco - Customer Churn Analysis and Prediction</a></h4>
 								<p>Performed exploratory data analysis and built a predictive model in Python.</p>
