--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 								<drop class="accordion">Skills</drop>
 									<div class="panel">
 										<p>
-											<b>Data Visualization & Cleaning:</b> Tableau (Public), Microsoft PowerBI (DAX), Microsoft Excel
+											<b>Data Visualization & Cleaning:</b> Tableau, Microsoft PowerBI (DAX), Microsoft Excel
 										<br />
 										<br />
 											<b>Programming Languages:</b> SQL (MySQL, Microsoft SQL Server), Python (pandas, matplotlib, seaborn, numpy), HTML, CSS
@@ -75,7 +75,7 @@
 											In my free time, I practice yoga, read books, play pickleball, and learn new recipes. I am passionate about Excel and use it for an assortment of personal matters from travel itineraries to fantasy basketball.
 											<br />
 											<br />
-											<b>Currently Reading:</b> Outliers by Malcolm Gladwell and Storytelling with Data by Cole Nussbaumer Knaflic
+											<b>Currently Reading:</b> Mindset by Carol Dweck and Storytelling with Data by Cole Nussbaumer Knaflic
 										</p>
 									</div>
 							</div>
