--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
 								<drop class="accordion random-facts">Random Facts About Me</drop>
 									<div class="panel">
 										<p>
-											In my free time, I practice yoga, read books, play pickleball, and learn new recipes. I am passionate about Excel and use it for an assortment of personal matters from travel itineraries to fantasy basketball.
+											In my free time, I practice yoga, read books, play pickleball, and learn new recipes. I am passionate about Excel and use it for an assortment of personal interests from travel itineraries to fantasy basketball.
 											<br />
 											<br />
 											<b>Currently Reading:</b> Mindset by Carol Dweck and Storytelling with Data by Cole Nussbaumer Knaflic
